fixed welcome application

--- a/airootfs/etc/xdg/autostart/cnchi.desktop
+++ b/airootfs/etc/xdg/autostart/cnchi.desktop
@@ -4,3 +4,4 @@ Name=Reborn Installer
 Exec=/usr/bin/cnchi-start.sh
 Icon=/usr/share/applications/cnchi.png
 Terminal=True
+X-GNOME-Autostart-Delay=20
